academic program validation spacing issues, Insight thumbnail height issues

--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -60,6 +60,7 @@ img {
     border-style: none;
 }
  .insight-thumbnail {
+    width: 100%;
     max-height: 100px;
     overflow: hidden;
  }
